--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.47",
     "@collab-ui/core": "^10.10.0",
+    "classnames": "^2.2.6",
     "moment": "^2.22.0",
     "object-assign": "4.1.1",
     "react-aria-modal": "^2.11.1"
